Fix spacing pools tabs

--- a/src/app/components/earn/pools/pools-card/pools-card.component.css
+++ b/src/app/components/earn/pools/pools-card/pools-card.component.css
@@ -4,6 +4,8 @@
     border:2px solid rgb(233, 234, 235);
     border-radius: 20px;
     padding: 20px;
+    padding-bottom: 0;
+    border-bottom: 0;
 }
 .pools-card {
     border-bottom: 2px solid rgb(233, 234, 235);
@@ -41,7 +43,7 @@
     inset: 0px auto auto 0px;
     z-index: 5;
 }
-.big-token svg {
+.big-token img {
     width:36.8px;
     height:36.8px;
 }
@@ -98,6 +100,20 @@
 }
 .text4 p:last-of-type, .text5 p:last-of-type {
     color:var(--violascuro);
+}
+.text4 {
+    position: absolute;
+    left: 47%;   
+}
+.text5 {
+    position: absolute;
+    left: 60%;
+}
+.details {
+    position:absolute;
+    margin-top: 11px;
+    left: 78%;
+
 }
 .details-btn {
     height: min-content;
